--- a/public/css/default.css
+++ b/public/css/default.css
@@ -1,9 +1,5 @@
 /*
 =====================================================================
-*   Ceevee v1.0 Default Stylesheet
-*   url: styleshout.com
-*   03-17-2014
-=====================================================================
 
 TOC:
 a. Webfonts and Icon fonts
@@ -800,6 +796,13 @@ properly.
 	margin-left: auto !important;
 	margin-right: auto !important;
 	text-align: center !important;
+}
+
+.vertical-hr{ 
+   border:         none;
+   border-left:    2px solid hsla(200, 10%, 50%,100);
+   height:         10px;
+   width:          2px;
 }
 
 
